# AgenticAi

./: .env.example  LICENSE  README.md  pyproject.toml
src/agentic_ai/: __init__.py  main.py
src/agentic_ai/agent/: __init__.py  bom_validator.py
src/agentic_ai/config/: __init__.py  settings.py
src/agentic_ai/indexing/: __init__.py  knowledge_base.py  llamaindex_config.py
src/agentic_ai/tools/: __init__.py
src/agentic_ai/tools/langchain/: __init__.py  inventory.py
src/agentic_ai/tools/llamaindex/: __init__.py  rules.py
tests/: test_bom_validator_integration.py  test_inventory.py  test_placeholder.py
