[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-ai"
version = "0.1.0"
description = "Agent orchestration with LangChain and LlamaIndex tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0,<1.0.0",
    "langchain-core>=0.3.0,<1.0.0",
    "langchain-openai>=0.2.0",
    "llama-index>=0.12.0",
    "llama-index-core>=0.12.0",
    "llama-index-embeddings-openai>=0.3.0",
    "llama-index-llms-openai>=0.3.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
agentic-ai = "agentic_ai.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
